cabal-version:      3.0
name:               myphoto

version:            0.1.0.0
synopsis: my tooling to do stack in macro photography
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Maximilian Huber
maintainer:         gh@maxhbr.de
-- copyright:
category:           Graphics
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options:      -Wall -threaded -rtsopts

executable myphoto
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    -- other-modules:
    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.17.2.1,
                      SafeSemaphore,
                      aeson,
                      async,
                      bytestring,
                      bytestring,
                      containers,
                      directory,
                      directory-tree,
                      filepath,
                      loadavg,
                      mtl,
                      netpbm,
                      optparse-applicative,
                      process,
                      split,
                      statistics,
                      temporary,
                      text,
                      time,
                      unix,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
