cabal-version:      3.0
name:               myphoto

version:            0.1.0.0
synopsis: my tooling to do stack in macro photography
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Maximilian Huber
maintainer:         gh@maxhbr.de
-- copyright:
category:           Graphics
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options:      -Wall -threaded

library
    import:           warnings
    exposed-modules:
        MyPhoto.Stack,
        MyPhoto.WatchForStacks
    other-modules:
        MyPhoto.Actions.Align,
        MyPhoto.Actions.EnblendEnfuse,
        MyPhoto.Actions.Metadata,
        MyPhoto.Actions.FileSystem,
        MyPhoto.Actions.FocusStack,
        MyPhoto.Actions.Montage,
        MyPhoto.Actions.Outliers,
        MyPhoto.Actions.UnRAW,
        MyPhoto.Actions.UnTiff,
        MyPhoto.Wrapper.Dcraw,
        MyPhoto.Wrapper.EnblendEnfuse,
        MyPhoto.Wrapper.FocusStack,
        MyPhoto.Model,
        MyPhoto.Video,
        MyPhoto.Monad

    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.17.2.1,
                      SafeSemaphore,
                      aeson,
                      async,
                      bytestring,
                      bytestring,
                      containers,
                      directory,
                      directory-tree,
                      filepath,
                      loadavg,
                      mtl,
                      netpbm,
                      optparse-applicative,
                      process,
                      split,
                      statistics,
                      temporary,
                      text,
                      time,
                      unix,
                      vector,
                      hsexif,
                      dir-traverse,
                      data-default
    hs-source-dirs:   src
    default-language: Haskell2010

executable myphoto-stack
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base ^>=4.17.2.1,
                      myphoto
    hs-source-dirs:   app-stack
    default-language: Haskell2010

executable myphoto-watch
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base ^>=4.17.2.1,
                      myphoto
    hs-source-dirs:   app-watch
    default-language: Haskell2010
