cabal-version:      3.0
name:               myphoto

version:            0.1.0.0
synopsis: my tooling to do stack in macro photography
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Maximilian Huber
maintainer:         gh@maxhbr.de
-- copyright:
category:           Graphics
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options:      -Wall -threaded

library
    import:           warnings
    exposed-modules:
        MyPhoto.Impl,
        MyPhoto.AppStack,
        MyPhoto.AppWatch,
        MyPhoto.AppAlign,
        MyPhoto.AppToPNG,
        MyPhoto.Model,
        MyPhoto.Utils.Chunking
    other-modules:
        MyPhoto.Utils.Samples,
        MyPhoto.Actions.Align,
        MyPhoto.Actions.Downscale,
        MyPhoto.Actions.EnblendEnfuse,
        MyPhoto.Actions.Metadata,
        MyPhoto.Actions.FileSystem,
        MyPhoto.Actions.FocusStack,
        MyPhoto.Actions.Montage,
        MyPhoto.Actions.Outliers,
        MyPhoto.Actions.UnRAW,
        MyPhoto.Actions.UnTiff,
        MyPhoto.Actions.UnHeif,
        MyPhoto.Wrapper.DcrawWrapper,
        MyPhoto.Wrapper.EnblendEnfuseWrapper,
        MyPhoto.Wrapper.FocusStackWrapper,
        MyPhoto.Video,
        MyPhoto.Monad

    other-extensions: OverloadedStrings
    build-depends:    base,
                      SafeSemaphore,
                      aeson,
                      async,
                      bytestring,
                      bytestring,
                      containers,
                      directory,
                      directory-tree,
                      filepath,
                      loadavg,
                      mtl,
                      netpbm,
                      optparse-applicative,
                      process,
                      split,
                      statistics,
                      temporary,
                      terminal-progress-bar,
                      text,
                      time,
                      unix,
                      vector,
                      hsexif,
                      dir-traverse,
                      data-default
    hs-source-dirs:   src
    default-language: Haskell2010

executable myphoto-stack
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base,
                      myphoto
    hs-source-dirs:   app-stack
    default-language: Haskell2010

executable myphoto-watch
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base,
                      myphoto
    hs-source-dirs:   app-watch
    default-language: Haskell2010

executable myphoto-toPNG
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base,
                      myphoto
    hs-source-dirs:   app-toPNG
    default-language: Haskell2010

executable myphoto-gallery
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base,
                      containers,
                      directory,
                      filepath,
                      cryptonite,
                      bytestring,
                      text,
                      time,
                      tomland,
                      optparse-applicative
    other-modules:    CmdAddMeta,
                      CmdImport,
                      Model
    hs-source-dirs:   app-gallery
    default-language: Haskell2010

test-suite test-myphoto
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base,
                      myphoto,
                      test-framework,
                      test-framework-hunit,
                      HUnit

executable myphoto-align
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:    base,
                      myphoto
    hs-source-dirs:   app-align
    default-language: Haskell2010
